re PR gcov-profile/55650 (Firefox profiledbuild:  libxul.so: cannot map zero-fill pages: Cannot allocate memory)

PR gcov-profile/55650
	* coverage.c (coverage_obj_init): Return false if no functions
	are being emitted.

	* g++.dg/other/pr55650.C: New test.
	* g++.dg/other/pr55650.cc: New file.

From-SVN: r194470